# Gsxt-Solver

./: .gitattributes  .gitignore  GITHUB_RELEASE.md  IMPROVEMENT_PLAN.md  LICENSE  MODEL_CARD.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: python-package.yml
Scripts/GJQYXYGS/: README.md  config.example.json  gsxt_solver_bridge.py  requirements.txt  server.py
Scripts/GJQYXYGS/edge_extension/: background.js  content.js  manifest.json  panel.css
Scripts/Gsxt/: install_paddlex_cpu_env.ps1  requirements.txt  runtime-constraints.txt
Scripts/Gsxt/data/: semantic_phrases.txt
Scripts/Gsxt/demos/: dynamic_mixed_infer.py
Scripts/Gsxt/synthetic/: generate_mixed_scene.py
Scripts/Gsxt/tools/: build_default_semantic_lexicon.ps1  build_semantic_lexicon.py  coco_char_labels_to_paddleocr_rec.py  coco_to_icon_cls.py  coco_to_paddledet_binary.py  early_stop_runner.py  evaluate_header_annotations.py  evaluate_header_intent_arbitration.py  predict_header_intent.py  prepare_chinese_char_labeling.py  synthetic_icon_to_cls.py  synthetic_to_paddledet.py  synthetic_to_paddleocr.py  train_header_intent_model.py
Scripts/Gsxt/training/: setup_paddledetection_repo.ps1  setup_paddleocr_repo.ps1  setup_rec_pretrained.ps1  train_paddledet_synthetic.ps1  train_synthetic_icon_cls.ps1  train_synthetic_icon_cls.py  train_synthetic_rec.ps1
src/gsxt_solver/: __init__.py  batch_cli.py  cli.py  config.py  models.py  result.py  solver.py
tests/: test_result.py  test_runtime_constraints.py  test_solver_outputs.py
tests/fixtures/: README.md
(+11 files in other folders)
